<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ROM</string>
    <string name="userName">Usuario/PIN</string>
    <string name="restaurantKey">Id Restaurante</string>
    <string name="userPass">Contraseña</string>
    <string name="userPassWord">Contraseña</string>
    <string name="attempLoginButton">Iniciar sesión</string>
    <string name="errorMail">Usuario/PIN inválido</string>
    <string name="errorTooShortPass">La contraseña es corta</string>
    <string name="errorInvalidadPass">Contraseña incorrecta</string>
    <string name="errorFieldIncomplete">Por favor completa con tu usuario/PIN</string>
    <string name="loginProcess">Iniciando sesión ..</string>
    <string name="backend_url">http://192.168.1.37:8080/rom/</string>
    <string name="refresh">Refrescar</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="menu">Carta</string>
    <string name="search">Buscar</string>
    <string name="notes">Notas:</string>
    <string name="additions">Guarniciones/Salsas:</string>
    <string name="prices">Porciones:</string>
    <string name="ok">OK</string>
    <string name="settings">Preferencias</string>
    <string name="setup">Configuración</string>
    <string name="empty">No hay resultados</string>
    <string name="empty_tables">No hay mesas</string>
    <string name="empty_orders">No hay platos</string>
    <string name="connectivity_error">El servidor no responde, por favor revise si esta conectado y/o intente más tarde.</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="errorDialog">Aceptar</string>
    <string name="continuar">Continuar</string>
    <string name="empty_restaurant_key">Por favor completa la clave de identificación del restaurante</string>
    <string name="title_activity_main">Mesas</string>
    <string name="tablelabel">Mesa </string>
    <string name="mozolabel">Mozo:</string>
    <string name="capacitylabel">Capacidad:</string>
    <string name="joinlabel">Mesas unidas:</string>
    <string name="cubiertoslabel">Cubiertos:</string>
    <string name="opentable">Abrir mesa:</string>
    <string name="radiono">No:</string>
    <string name="radiosi">Si:</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_orders">Cancelar Pedido(s)</string>
    <string name="abrirmesa">Abrir mesa</string>
    <string name="joinedlabel">Join mesa</string>
    <string name="closeTable">Cerrar</string>
    <string name="editTable">Editar</string>
    <string name="menuTable">Menu</string>
    <string name="actualOrder">Pedido</string>
    <string name="my_tables">Mías</string>
    <string name="free_tables">Libres</string>
    <string name="all_tables">Todas</string>
    <string name="order_items">Pedir</string>
    <string name="close_table">Cerrar</string>
    <string name="total">Total</string>
    <string name="tableNotAvailable">Mesa no habilitada</string>
    <string name="pendant">Pendientes</string>
    <string name="doing">En\nPreparacion</string>
    <string name="done">Terminados</string>
    <string name="deleteItemConfirmation">¿Está seguro que desea eliminar el/los platos?</string>
    <string name="cancelOrderConfirmation">¿Está seguro que desea cancelar el plato?</string>
    <string name="deliveredOrderConfirmation">¿Ya entregó este plato?</string>
    <string name="rejectOrderConfirmation">¿Está seguro que va a devolver este plato?</string>
    <string name="tookTableConfirmation">¿Está seguro que desea tomar esta mesa?</string>
    <string name="reject">Rechazar</string>
    <string name="rejectAndOrder">Nuevo Pedido</string>
    <string name="join">Unir</string>
    <string name="actualCapacity"> Capacidad actual: </string>
    <string name="cancelSelection">Deshacer</string>
    <string name="cleanAll">Limpiar seleccion</string>
    <string name="confirmChanges">Confirmar</string>
    <string name="wait_payment">Esperar pago</string>
    <string name="cuponConfirmation">¿Desea agregar el siguiente descuento: \"{Coupon.title}\"?</string>
    <string name="invalidCoupon">El cupón: \"{Coupon.title}\" no se encuentra vigente por el momento</string>
    <string name="invalidQR">El cupó no se encuentra vigente por el momento o es invalido</string>
    <string name="qrLabel">QR</string>
    <string name="needToDeliverFirst">Cuidado!, Antes de cerra la mesa debe entregar todos las órdenes</string>
    <string name="wantToAddCupon">¿Desea agregar una promoción antes de cerrar la mesa?</string>
</resources>
