<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/loginScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.23"
        android:background="@drawable/food"
        android:scrollbars="none" >

        <LinearLayout
            style="@color/black_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <EditText
                android:id="@+id/userLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:singleLine="true">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userPass"
                android:inputType="textPassword"
                android:singleLine="true"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/attempLoginButton" />

        </LinearLayout>
    </ScrollView>
</merge>
