<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="@android:color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp"
                android:gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:text="@string/rejectOrderConfirmation"
                    android:id="@+id/textView"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/input"
                    android:lines="4"
                    android:layout_marginTop="10dp"
                    android:maxLines="4" android:gravity="top"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/abs__bright_foreground_disabled_holo_dark">
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="4dip"
                    android:background="?dividerVertical"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
>
                <Button
                        android:id="@+id/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:background="?selectableItemBackground"
                        android:text="@string/cancel"
                        android:textColor="@android:color/white"/>
                <View
                        android:id="@+id/ViewColorPickerHelper"
                        android:layout_width="1dip"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dip"
                        android:layout_marginTop="4dip"
                        android:background="?dividerVertical"/>

                <Button
                        android:id="@+id/reject"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0.33"
                        android:background="?selectableItemBackground"
                        android:text="@string/reject"
                        android:textColor="@android:color/white"
                        android:layout_alignParentBottom="true"/>
                <View
                        android:id="@+id/ViewColorPickerHelper2"
                        android:layout_width="1dip"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dip"
                        android:layout_marginTop="4dip"
                        android:background="?dividerVertical"/>

                <Button
                        android:id="@+id/rejectAndOrder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0.33"
                        android:background="?selectableItemBackground"
                        android:text="@string/rejectAndOrder"
                        android:textColor="@android:color/white"
                        android:layout_alignParentBottom="true"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
